capstone2 to be coninued

--- a/capstone2_Portefolio/index.html
+++ b/capstone2_Portefolio/index.html
@@ -1,80 +1,21 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Site personnel de présentation de compétences, projets et contact.">
-    <title>Mon Site Personnel</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Personal website</title>
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&amp;family=Sacramento&amp;display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#hero">Accueil</a></li>
-                <li><a href="#about">À propos</a></li>
-                <li><a href="#resume">CV</a></li>
-                <li><a href="#projects">Projets</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <section id="hero">
-        <div class="hero-container">
-            <img src="./assets/images/Francois_A_professional_LinkedIn_profile_photo_of_a_developer_w_9a90a251-068c-4909-811e-b65e632f891e_ins.jpg" alt="Photo de profil" class="profile-pic">
-            <div>
-                <h1>Bienvenue sur mon site personnel</h1>
-                <p>Je suis François, étudiant en informatique, passionné par la programmation et le développement web.</p>
-            </div>
-        </div>
-    </section>
-
-    <section id="about">
-        <h2>À propos de moi</h2>
-        <div class="about-container">
-            <img src="./assets/images/gigachd bee.png" alt="Illustration de mes intérêts" class="about-image">
-            <p>Je suis basé à Boussu, en Belgique. J'aime le développement web, les nouvelles technologies et apprendre de nouvelles compétences.</p>
-        </div>
-    </section>
-
-    <section id="resume">
-        <h2>CV</h2>
-        <ul>
-            <li><strong>Éducation :</strong> Bachelier en Informatique de Gestion - IRAMPS Mons</li>
-            <li><strong>Expérience :</strong> Développement d'applications de bureau et projets personnels.</li>
-            <li><strong>Compétences :</strong> HTML, CSS, PHP, Laravel, bases de données.</li>
-        </ul>
-    </section>
-
-    <section id="projects">
-        <h2>Projets</h2>
-        <div class="projects-container">
-            <div class="project-item">
-                <img src="./assets/images/mountain.png" alt="Capture du projet 1">
-                <h3>Application de Gestion</h3>
-                <p>Une application pour organiser les tâches quotidiennes, développée en C# avec une base de données.</p>
-            </div>
-            <div class="project-item">
-                <img src="./assets/images/nature.jpg" alt="Capture du projet 2">
-                <h3>Site Portfolio</h3>
-                <p>Un site personnel montrant mes projets et compétences en développement web.</p>
-            </div>
-        </div>
-    </section>
-
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Envie de collaborer ou de discuter ? Vous pouvez me contacter via :</p>
-        <ul>
-            <li>Email : francois@example.com</li>
-            <li>Téléphone : +32 123 456 789</li>
-            <li>LinkedIn : <a href="https://linkedin.com/in/francois" target="_blank">linkedin.com/in/francois</a></li>
-        </ul>
-    </section>
-
-    <footer>
-        <p>&copy; 2024 François Mignon. Tous droits réservés.</p>
-    </footer>
+   <header id="hero">
+    <h1>Je suis François</h1>
+    <h2>Un <span>pro</span>grammeur</h2>
+    <img class="chad" src="./assets/images/gigachad.png" alt="gigachad">
+   </header>
+   <section id="about-me"></section> 
+   <section id="resume"></section> 
+   <section id="projects"></section> 
+   <section id="contact-me"></section>
+   <footer id="footer"></footer> 
 </body>
 </html>
