capstone2 reboot start

--- a/capstone2_Portefolio/index.html
+++ b/capstone2_Portefolio/index.html
@@ -1,21 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Personal website</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&amp;family=Sacramento&amp;display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-   <header id="hero">
-    <h1>Je suis François</h1>
-    <h2>Un <span>pro</span>grammeur</h2>
-    <img class="chad" src="./assets/images/gigachad.png" alt="gigachad">
-   </header>
-   <section id="about-me"></section> 
-   <section id="resume"></section> 
-   <section id="projects"></section> 
-   <section id="contact-me"></section>
-   <footer id="footer"></footer> 
+    <header id="hero">
+        <nav class="navbar">
+            <ul>
+                <li><a href="#introduction">Introduction</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#interet">Interet</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section id="introduction">
+        <h1>Introduction</h1>
+        <div class="container-intro">
+            <img class="profile-pic" src="./assets/images/Francois_A_professional_LinkedIn_profile_photo_of_a_developer_w_9a90a251-068c-4909-811e-b65e632f891e_ins.jpg"
+                alt="profile-pic">
+            <div class="profile-desc">
+                <h2><span>Pro</span>grammeur</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, ipsa eaque et inventore, unde
+                    quidem excepturi dolores ut atque suscipit nesciunt, enim assumenda consequuntur id itaque sapiente
+                    corporis? Eligendi, eum.</p>
+            </div>
+        </div>
+    </section>
+    <section id="portfolio"></section>
+    <section id="interet"></section>
+    <section id="contact"></section>
+    <footer></footer>
 </body>
+
 </html>
