--- a/capstone2_Portefolio/index.html
+++ b/capstone2_Portefolio/index.html
@@ -28,15 +28,22 @@
         </nav>
     </header>
     <section id="introduction">
-        <h1>Introduction</h1>
         <div class="container-intro">
-            <img class="profile-pic" src="./assets/images/Francois_A_professional_LinkedIn_profile_photo_of_a_developer_w_9a90a251-068c-4909-811e-b65e632f891e_ins.jpg"
+            <img class="profile-pic"
+                src="./assets/images/Francois_A_professional_LinkedIn_profile_photo_of_a_developer_w_9a90a251-068c-4909-811e-b65e632f891e_ins.jpg"
                 alt="profile-pic">
-            <div class="profile-desc">
-                <h2><span>Pro</span>grammeur</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, ipsa eaque et inventore, unde
-                    quidem excepturi dolores ut atque suscipit nesciunt, enim assumenda consequuntur id itaque sapiente
-                    corporis? Eligendi, eum.</p>
+            <div>
+                <h1>Introduction</h1>
+                <div class="profile-desc">
+                    <h2><span>Pro</span>grammeur</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec posuere ipsum at dui consequat,
+                        elementum ultricies orci condimentum. Aenean porttitor odio ac ex congue interdum. Curabitur eu
+                        libero vel est blandit mattis. Nullam non condimentum nisl. Ut id nisi libero. Morbi commodo,
+                        ligula volutpat imperdiet viverra, leo dui sagittis odio, ac euismod augue mi vitae mauris.
+                        Nullam tristique, lacus nec eleifend venenatis, augue enim lobortis dolor, vitae auctor velit
+                        dui vitae risus. Aenean mollis dolor sed turpis sagittis, sed vulputate magna aliquet. Vivamus
+                        tincidunt erat quis imperdiet vulputate. Aenean at auctor sem.</p>
+                </div>
             </div>
         </div>
     </section>
